# weather-api

./: BuildWeatherDb.py  QueryWeatherDb.py  README.md  formatdata.csv  pyproject.toml  requirements.txt  weather.db
assets/data/: formatdata.csv  formatdata.xlsx  formatdata2.csv
mod_3/: CEIS1110_Module3_Deliverable.pptx  README.md
mod_4/: CEIS110_Project_Template_Module_Deliverable_Week_4_v3.pptx
mod_5/: ExtractTempHumidity.py  OVERVIEW.md  extractedDataVis.ipynb
mod_6/: OVERIEW.md
